tests/neg/validate-parsing-2.scala
case class ByName(x: => Int) // error
